# Losion

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CREDITS.md  LICENSE  README.md  SECURITY.md  benchmark_results.json  memory_benchmark_results.json  pyproject.toml  requirements.txt  setup.py  test_results.json
.github/workflows/: ci.yml
configs/: losion-1b.yaml  losion-48b.yaml  losion-7b.yaml
docs/: AGENTS.md  AGENT_ARCHITECTURE_RESEARCH.md  AGENT_TRAINING_TECHNIQUES.md  ARCHITECTURE.md  AUDIT_v1.8.0.md  AUDIT_v1.9.0.md  AUDIT_v2.1.0.md  AUDIT_v2.3.0.md  CONTRIBUTING.md  GETTING_STARTED.md  HARDWARE.md  TRAINING.md
losion/: __init__.py  config.py
losion/agent/: __init__.py  calibration.py  memory.py  meta_skills.py  orchestrator.py  reflection.py  signals.py
losion/agent/planning/: __init__.py  deps_planner.py  mcts_agent.py  paradigm_router.py
losion/agent/retrieval/: __init__.py  agentic_retriever.py
losion/agent/safety/: __init__.py  risk_simulator.py
losion/agent/skills/: __init__.py  creator.py  manager.py  store.py
losion/agent/tools/: __init__.py  creator.py  registry.py  (+2 more)
losion/core/: __init__.py
losion/distributed/: __init__.py  parallel.py
losion/evaluation/: __init__.py  benchmarks.py
losion/inference/: __init__.py  expert_prefetch.py  generation.py  kv_cache.py  kv_quantization.py  quantspec.py
losion/models/: __init__.py  losion_decoder.py  losion_model.py  losion_model_v2.py  parallel_head.py  shared.py
losion/safety/: __init__.py  alignment.py
losion/training/: __init__.py  active_learning.py  advanced_backprop.py  advanced_memory_data.py  advanced_rlhf.py  compute_aligned.py  curriculum.py  dapo.py  etr_reward.py  evolutionary_search.py  gen_distillation.py  grpo.py  llm_jepa.py  losion_orchestrator.py  losion_recipe.py  rlvr.py  trainer.py  utils.py
losion/utils/: __init__.py  fp8.py  hardware.py  logging.py  upcycling.py
scripts/: benchmark_17m.py  benchmark_memory.py  convert_checkpoint.py  evaluate.py  train.py  train_test.py
tests/: test_advanced.py  test_agent.py  test_attention.py  test_evoformer.py  test_mcts_agent.py  test_model.py  test_router.py  test_ssm.py  test_v2_4.py  test_v2_5_4.py  test_v2_5_6.py
(+85 files in other folders)
